Fix wrong font in footer titles

--- a/css/style.css
+++ b/css/style.css
@@ -1294,7 +1294,6 @@ body {
 }
 
 .footer__title {
-  font-family: SF Pro Display;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
