--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -13,7 +13,6 @@
     border-bottom: 1px solid #e2e2e2;
   }
   &__title {
-    font-family: SF Pro Display;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
